# wgpu-tester

./: .gitignore  Cargo.toml  README.md  animations.md  bugs.md  build.rs  skeletal.md
res/buggy/: Buggy.gltf
src/: app.rs  constants.rs  geo_functions.rs  gltf_proc.md  lib.rs  main.rs  object.rs  scene.rs  shader.wgsl  transforms.rs  util.rs  vertexd.rs
src/app/: app.rs  app_config.rs  app_state.rs  mod.rs  util.rs
src/loader/: loader.rs  util.rs
src/model/: animation.rs  mod.rs  model.rs  model2.rs  nodes.txt  notes.md  primitive.rs  range_splicer.rs  util.rs  vertex.rs
src/model/animation/: animation.rs  animation_controller.rs  animation_node.rs  mod.rs  test.rs  util.rs
src/model/loader/: loader.rs  util.rs
src/model/materials/: material.rs  mod.rs  texture.rs  util.rs
src/scene/: camera.rs  instances.rs  instances2.rs  mod.rs  scene.rs  scene2.rs  scene_scaffolds.rs  util.rs
