[package]
name = "code-notes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.30.9", features = ["rwh_05"] }
wgpu = "24.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
cgmath = "0.18.0"
devtimer = "4.0.1"

[dependencies.gltf]
version = "1"
