[package]
name = "code-notes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.30.9", features = ["rwh_05"] }
wgpu = "25.0.2"
pollster = "0.4.0"
bytemuck = { version = "1.22.0", features = ["derive"] }
cgmath = "0.18.0"
devtimer = "4.0.1"
time = "0.3.41"
rand = "0.8"

[dependencies.gltf]
version = "1.4.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
